scrollbar fix and img change

--- a/src/main.css
+++ b/src/main.css
@@ -25,7 +25,7 @@ body {
     position: relative;
     padding: 0;
     margin: 0;
-    background-color: white;
+    background-color: black;
     overflow-x: hidden;
     overflow-y: overlay;
 }
